Parsed the arguments

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@ node_modules
 .vscode
 out
 
+# Added by cargo
+/target
+
+
+# Added by cargo
+#
+# already existing elements were commented out
+
+#/target
